Minor header/footer spacing issues

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -204,6 +204,10 @@
 .footer__sitelinks,
 .menu--footer-site-links {
   text-transform: lowercase;
+  padding-top: 1em;
+  @include respond-to($break-m) {
+    padding-top: 0;
+  }
   li {
     display: inline-block;
     padding: 0 0.5em;
